Fix overflow 'overlay' -> 'visible'

--- a/assets/chessground.base.css
+++ b/assets/chessground.base.css
@@ -116,11 +116,11 @@ piece.fading {
 .cg-wrap .cg-custom-svgs {
   /* over piece.anim = 8, but under piece.dragging = 10 */
   z-index: 9;
-  overflow: overlay;
+  overflow: visible;
 }
 
 .cg-wrap .cg-custom-svgs svg {
-  overflow: overlay;
+  overflow: visible;
 }
 
 .cg-wrap coords {
